k8s/deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: identity
spec:
  paused: true
  template:
    metadata:
      labels:
        app: whiskyarchive
        component: identity
    spec:
      containers:
      - name: identity
        image: whiskyarchive/identity.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whiskyrecording
spec:
  paused: true
  template:
    metadata:
      labels:
        app: whiskyarchive
        component: whiskyrecording
    spec:
      containers:
      - name: whiskyrecording
        image: whiskyarchive/whiskyrecording.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webmvc
spec:
  paused: true
  template:
    metadata:
      labels:
        app: whiskyarchive
        component: webmvc
    spec:
      containers:
      - name: webmvc
        image: whiskyarchive/webmvc
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webwhiskyarchiveagg
spec:
  paused: true
  template:
    metadata:
      labels:
        app: whiskyarchive
        component: webwhiskyarchiveagg
    spec:
      containers:
      - name: webwhiskyarchiveagg
        image: whiskyarchive/webwhiskyarchiveagg
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-key
---
